my first commmit

--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
     <button onclick="showSection('update')">Update Product</button>
     <button onclick="showSection('delete')">Delete Product</button>
   </nav>
+  <!-- hgdsujgsdds -->
 
   <!-- CREATE PRODUCT -->
   <section id="create">
